package com.trabajo.fitnessapp.dominio;

public enum Genero {
    HOMBRE,
    MUJER,
    OTRO
}
