package com.trabajo.fitnessapp.dominio;

public enum Musculo {
    CUELLO,
    HOMBROS,
    DORSALES,
    PECHO,
    BICEPS,
    TRICEPS,
    ANTEBRAZO,
    ZONA_LUMBAR,
    ESPALDA_MEDIA,
    TRAPECIOS,
    ADUCTORES,
    ABDUCTORES,
    ABDOMINALES,
    GLUTEOS,
    CUADRICEPS,
    ISQUIOTIBIALES,
    GEMELOS
}
