package com.trabajo.fitnessapp.dominio;

public enum NivelDeActividad {
    SEDENTARIO,
    EJERCICIO_LIGERO,
    EJERCICIO_MODERADO,
    EJERCICIO_INTENSO,
    ATLETA
}
