package com.trabajo.fitnessapp.dominio;

public enum Objetivo {
    PERDER_GRASA,
    GANAR_MASA_MUSCULAR,
    MANTENER_PESO
}
