@startuml

' ========================
' ====== ENUMERADOS ======
' ========================

enum Musculo  {
CUELLO
HOMBROS
DORSALES
PECHO
BICEPS
TRICEPS
ANTEBRAZO
ZONA_LUMBAR
ESPALDA_MEDIA
TRAPECIOS
ADUCTORES
ABDUCTORES
ABDOMINALES
GLUTEOS
CUADRICEPS
ISQUIOTIBIALES
GEMELOS
}

enum DiaDeLaSemana  {
LUNES
MARTES
MIERCOLES
JUEVES
VIERNES
SABADO
DOMINGO
}

enum Genero {
HOMBRE
MUJER
OTRO
}

enum Objetivo {
    PERDER_GRASA
    GANAR_MASA_MUSCULAR
    MANTENER_PESO
}

enum NivelDeActividad {
    SEDENTARIO
    EJERCICIO_LIGERO
    EJERCICIO_MODERADO
    EJERCICIO_INTENSO 
    ATLETA
}
 
' ========================
' ======== CLASES ========
' ========================

class Usuario {
- idUsuario : Long
- nombre : String
- apellido1 : String
- apellido2 : String [0..1]
- fechaNacimiento : LocalDate
- genero: Genero
- peso : float
- altura : int
- telefono : String
- nivelDeActividad : NivelDeActividad
- objetivo : Objetivo
}

class Credenciales {
- idCredenciales : Long
- email : String
- contrasenha : String
}

class HistorialPeso {
- idHistorialPeso : Long
- peso : float
- fecha : LocalDate
}

class RegistroComidaDiaria {
- idRegistroComidaDiaria : Long
- fecha : LocalDate
- /caloriasTotales : float
- /proteinas : float
- /carbohidratos : float
- /grasas : float
}

class DietaCompleta {
- idDietaCompleta : Long
- nombre : String
- descripcion : String [0..1]
- /caloriasTotales : float
- /proteinas : float
- /carbohidratos : float
- /grasas : float
- activa : boolean
}

class DiaEnDieta {
- idDiaEnDieta : Long
- nombre : String
- /caloriasTotales : float
- /proteinas : float
- /carbohidratos : float
- /grasas : float
- diaDeLaSemana : DiaDeLaSemana
}


class Comida {
- idComida : Long
- nombre : String
- /caloriasTotales : float
- /proteinas : float
- /carbohidratos : float
- /grasas : float
}

class Ingrediente {
- idIngrediente : Long
- cantidadGramos : float
- /calorias : float
- /proteinas : float
- /carbohidratos : float
- /grasas : float
}

class Alimento {
- idAlimento : Long
- nombre : String
- caloriasPor100g : float
- proteinasPor100g : float
- carbohidratosPor100g : float
- grasasPor100g : float
}

class RutinaCompleta {
- idRutinaCompleta : Long
- nombre : String
- resumen : String [0..1]
}

class DiaEnRutina {
- idDiaEnDieta : Long
- nombre : String
- diaDeLaSemana : DiaDeLaSemana
}

class Ejercicio {
- idEjercicio : Long
- nombre : String
- musculoEnfocado : Musculo
}

class EjercicioEnDiaRutina {
- idEjercicioEnDiaRutina : Long
}

class Serie {
- idSerie : Long
- serieAnterior : String [0..1]
- repeticiones : int
- peso : int 
}

' ========================
' ====== RELACIONES ======
' ========================

Usuario *-- "0..*" DietaCompleta : dietas

Usuario *--  Credenciales : credenciales

Usuario *-- "1..*" HistorialPeso : historialPeso

Usuario *-- "0..*" RegistroComidaDiaria : registrosComidaDiaria

Comida "comida" --> "registros 0..*" RegistroComidaDiaria

DietaCompleta "dieta" --> "diasDeDieta 1..*" DiaEnDieta

Usuario *-- "0..*" RutinaCompleta : rutinas

DiaEnDieta "diaDeDieta"  --> "comidas 1..*" Comida

Comida "comida"  --> "ingredientes 1..*" Ingrediente

Ingrediente "ingredientes 0..*" --> "alimento 1" Alimento

Usuario *-- "0..*" Alimento : alimentosPersonales

RutinaCompleta "rutina"  --> "diasEnRutina 1..*" DiaEnRutina

DiaEnRutina "diaEnRutina" --> "ejerciciosAsignados 1..*" EjercicioEnDiaRutina

EjercicioEnDiaRutina "ejercicioUsuario 0..*" --> Ejercicio : ejercicio

EjercicioEnDiaRutina "ejercicioAsignado" --> "series 0..*" Serie

@enduml 